--- a/datacollection/user_app/frontend/src/components/recording/RecordingRecording.css
+++ b/datacollection/user_app/frontend/src/components/recording/RecordingRecording.css
@@ -1,12 +1,25 @@
 .recRecordContainer {
-    width: 90%;
+    width: 80%;
+    display: flex;
     margin: 20px auto;
     text-align: center;
+    overflow-y: auto;
+    padding: 20px;
+    max-height: 78vh;
+    box-sizing: border-box;
+}
+.recRecordHeader {
+    flex: 0 0 20%;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 .recRecordTable {
     width: 100%;
     border-collapse: collapse;
+    flex: 1;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 .recRecordTableHeader {
