Finished frontend for new User APP

--- a/datacollection/user_app/frontend/src/components/recording/Recording.css
+++ b/datacollection/user_app/frontend/src/components/recording/Recording.css
@@ -29,8 +29,16 @@
 
 .recordingButtonContainer {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     padding: 24px;
+}
+
+.backButton {
+    margin-right: auto;
+}
+
+.nextButton {
+    margin-left: auto;
 }
