Revamp everything to display error Added Validations in react app Changed CSS for couple of things Updated recipes

--- a/datacollection/user_app/frontend/src/components/home/Home.css
+++ b/datacollection/user_app/frontend/src/components/home/Home.css
@@ -43,7 +43,7 @@
 }
 
 .home-CorrectRecordingsRow,
-.home-MistakeRecordingsRow,
+.home-ErrorRecordingsRow,
 .home-TotalRecordingsRow {
     background-color: #f8f8f8;
     border-radius: 4px;
