--- a/datacollection/user_app/frontend/src/components/recording/Recording.css
+++ b/datacollection/user_app/frontend/src/components/recording/Recording.css
@@ -4,15 +4,27 @@
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
+    height: 80%;
 }
 
 .recordingHeader {
     width: 100%;
+    flex: 0.1;
+    flex-shrink: 0;
 }
 
 .recordingStepperContainer {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    flex: 0.9;
     padding: 24px;
+}
+
+.recordingStepper {
+    flex: 0.1;
+    flex-basis: 10%;
+    flex-shrink: 0;
 }
 
 .recordingContent {
@@ -25,6 +37,8 @@
     background-color: #f5f5f5;
     border-radius: 4px;
     margin-bottom: 24px;
+    flex: 0.8;
+    overflow-y: auto;
 }
 
 .recordingButtonContainer {
@@ -32,7 +46,8 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 24px;
+    flex: 0.1;
+    padding: 0 1rem;
 }
 
 .backButton {
