--- a/datacollection/user_app/frontend/src/components/recording/RecordingRecording.css
+++ b/datacollection/user_app/frontend/src/components/recording/RecordingRecording.css
@@ -1,12 +1,12 @@
 .recRecordContainer {
-    width: 80%;
     display: flex;
-    margin: 20px auto;
+    margin: 5px auto;
     text-align: center;
     overflow-y: auto;
     padding: 20px;
-    max-height: 78vh;
     box-sizing: border-box;
+    height: 70vh;
+    width: 85%;
 }
 .recRecordHeader {
     flex: 0 0 20%;
