--- a/datacollection/user_app/frontend/src/components/recording/RecordingReview.css
+++ b/datacollection/user_app/frontend/src/components/recording/RecordingReview.css
@@ -1,10 +1,10 @@
 .recReviewContainer {
     width: 90%;
-    margin: 20px auto;
+    margin: 5px auto;
     text-align: center;
     overflow-y: auto;
     padding: 20px;
-    max-height: 80vh;
+    height: 70vh;
     box-sizing: border-box;
 }
 
