--- a/datacollection/user_app/frontend/src/components/recording/RecordingSelection.css
+++ b/datacollection/user_app/frontend/src/components/recording/RecordingSelection.css
@@ -1,22 +1,25 @@
 .recordingSelectionContainer {
     display: flex;
     flex-direction: column;
-    height: 80vh;
+    height: 70vh;
+    width: 100%;
+    overflow-y: auto;
     background-color: #f5f5f5;
 }
 
 .recordingSelectionContent {
     display: flex;
     flex-direction: row;
-    flex: 1;
+    height: 100%;
     overflow-y: auto;
     padding: 20px;
 }
 
 .recordingSelectionGridContainer {
     display: flex;
-    flex: 0.9;
     flex-direction: column;
+    height: 100%;
+    width: 40%;
     overflow-y: auto;
     background-color: #fff;
     padding: 20px;
@@ -28,8 +31,20 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    height: 50%;
     margin-bottom: 20px;
     overflow-y: auto;
+}
+
+.recordingSelectionDisplayContainer {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 60%;
+    overflow-y: auto;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 
