--- a/datacollection/user_app/frontend/src/components/labelstudio/LabelStudio.css
+++ b/datacollection/user_app/frontend/src/components/labelstudio/LabelStudio.css
@@ -43,6 +43,7 @@
 .labelStudioActivityRecordingsTable td {
     padding: 10px;
     border: 1px solid #ccc;
+    text-align: center;
 }
 
 .labelStudioActivityRecordingsTable tr:nth-child(even) {
